--- a/angular.json
+++ b/angular.json
@@ -136,7 +136,8 @@
   "cli": {
     "schematicCollections": [
       "@ionic/angular-toolkit"
-    ]
+    ],
+    "analytics": "1a947a73-e9f9-4bc4-89ed-1039e31e65ae"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
